# arw

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
devspec/: 01_Product_Requirements_Document.md  02_Technical_Architecture.md  03_Developer_Task_Breakdown.md  04_Data_Source_Specification.md  05_Object_Detection_Algorithms.md  06_Radar_Site_Selection_Beam_Height.md  Accessible_Radar_Workstation_Handoff_Package.docx
docs/benchmarks/: dense_followup_manifest.json  tracking_benchmark_manifest.json  tracking_benchmark_manifest_broader_validation.json
docs/test_reports/: 2026-04-10-live-api-test.md  2026-04-10-live-replay-harness.md  2026-04-11-dense-confidence-followup.md  2026-04-11-dense-focus-publishability-followup.md  2026-04-11-dense-followup-evaluation.json  2026-04-11-dense-followup-evaluation.md  2026-04-11-focus-continuity-observability.md  2026-04-11-task5-motion-guidance-report.md  2026-04-11-task6-tracking-evaluation.json  2026-04-11-task6-tracking-evaluation.md  2026-04-11-task7-confidence-evaluation.json  2026-04-11-task7-confidence-evaluation.md  2026-04-11-tracking-system-report.md  2026-04-12-broader-focus-stability-evaluation.json  2026-04-12-broader-focus-stability-evaluation.md  2026-04-12-motion-agreement-followup.md  2026-04-13-continuity-tuning-evaluation.json  2026-04-13-continuity-tuning-evaluation.md  (+25 more)
scripts/: evaluate_tracking.py  live_replay.py
src/: buffer.py  detection.py  ingest.py  models.py  motion.py  parser.py  preprocess.py  server.py  sites.py  summary.py  tracker.py  velocity.py
src/tracking/: __init__.py  (+6 more)
(+33 files in other folders)
