[project]
name = "arw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arm-pyart>=2.2.0",
    "boto3>=1.42.84",
    "fastapi>=0.135.3",
    "geopy>=2.4.1",
    "nexradaws>=2.0.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
